--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,29 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/Currency"
-        android:layout_width="153dp"
-        android:layout_height="31dp"
+        android:layout_width="287dp"
+        android:layout_height="58dp"
         android:text="Currency Converter"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="5dp" />
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <Spinner
         android:id="@+id/spinner1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="184dp"
+        android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:spinnerMode="dropdown"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="36dp" />
+        tools:layout_editor_absoluteY="122dp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="184dp"
+        android:layout_height="46dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="235dp" />
 
 </android.support.constraint.ConstraintLayout>
